Fix ad-blocking and broken styles

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -2,6 +2,11 @@
 
 
 /*#region MANUAL OVERRIDES FOR HARDCODED STYLES AND FOR WHEN BUILT-IN DARK MODE IS DISABLED */
+// Navbar Meet now button background
+#owaMeetNowButton > div > div {
+	background: inherit !important;
+}
+
 // Settings panel header text color (dm override)
 .o365cs-base .o365sx-neutral-dark-font, .o365cs-base .o365sx-neutral-dark-hover-font:hover {
 	color: var(--dmfo-lightest) !important;
@@ -481,39 +486,75 @@ div[aria-label='Content pane'] {
 
 
 /*#region STYLES FOR MESSAGE DELETION TOOLTIP */
-// Message deletion tooltip background color and border radius
-._3xqEuTlsJbTQdiBbqhDlEy > div:first-child > div:first-child {
-	background-color: var(--dmfo-darker) !important;
-	border-radius: var(--dmfo-border-radius) var(--dmfo-border-radius) 0 0  !important;
+div[aria-label='Message list'] + div >,
+div[aria-label='Reading Pane'] + div > {
+	// Message deletion tooltip background color and border radius
+	div:first-child > div:first-child {
+		background-color: var(--dmfo-darker) !important;
+		border-radius: var(--dmfo-border-radius) var(--dmfo-border-radius) 0 0  !important;
+	}
+
+	// Message deletion tooltip undo/close button background color
+	div:first-child > div:first-child > div:nth-child(2) > button {
+		background-color: var(--dmfo-darker) !important;
+	}
+
+	// Message deletion tooltip undo/close button background color
+	div:first-child > div:first-child > div:nth-child(2) > button:hover {
+		background-color: var(--dmfo-dark) !important;
+	}
 }
 
-// Message deletion tooltip undo/close button background color
-._3xqEuTlsJbTQdiBbqhDlEy > div:first-child > div:first-child > div:nth-child(2) > button {
-	background-color: var(--dmfo-darker) !important;
-}
 
-// Message deletion tooltip undo/close button background color
-._3xqEuTlsJbTQdiBbqhDlEy > div:first-child > div:first-child > div:nth-child(2) > button:hover {
-	background-color: var(--dmfo-dark) !important;
-}
+// V2
+// div[aria-label='Message list'] + div >, div[aria-label='Reading list'] + div {
+// 	// Message deletion tooltip background color and border radius
+// 	> div:first-child > div:first-child {
+// 		background-color: var(--dmfo-darker) !important;
+// 		border-radius: var(--dmfo-border-radius) var(--dmfo-border-radius) 0 0  !important;
+
+// 		// Message deletion tooltip undo/close button background color
+// 		> div:nth-child(2) > button {
+// 			background-color: var(--dmfo-darker) !important;
+
+// 			// Message deletion tooltip undo/close button background color
+// 			&:hover {
+// 				background-color: var(--dmfo-dark) !important;
+// 			}
+// 		}
+// 	}
+// }
 /*#endregion*/
 
 
 /*#region AD HIDING FOR OUTLOOK PERSONAL */
-// Hide left ad in sidebar
-#app > div:first-child > div:last-child > div:first-child > div:first-child > div:first-child div:last-child > div:first-child > div:nth-child(2):not([role]) {
-	display: none !important;
+// Outlook content body
+#app > div:first-child > div:last-child > div:first-child > div:first-child > div:first-child > div:first-child {
+		// Hide right ad sidebar (when screen is wide)
+		> div:nth-child(4):not([data-max-width]) {
+			display: none !important;
+		}
+
+		// Hide full page ad in message list (when screen is narrow)
+		> div:nth-child(5) {
+			display: none !important;
+		}
+
+		// Hide ad at bottom of left sidebar
+		> div:first-child > div:nth-child(2):not([role]) > div:first-child > div:nth-child(2) {
+			display: none !important;
+		}
 }
 
-// Hide right ad sidebar (when screen is wide)
-#app > div:first-child > div:last-child > div:first-child > div:first-child > div:nth-child(4):not([data-max-width]) {
-	display: none !important;
-}
+// Hide top banner ad. It may not exist, so account for this
+// #app > div:first-child > div:last-child > div:first-child > div:first-child:not(:last-child):not(:nth-last-child(2)) {
+// 	display: none !important;
+// }
 
-// Hide bottom ad (when screen is narrow)
-#app > div:first-child > div:last-child > div:first-child > div:nth-child(2) {
-	display: none !important;
-}
+// Hide bottom ad (shown when screen is narrow). It may not exist on O365, so account for this
+// #app > div:first-child > div:last-child > div:first-child > div:last-child:not(:first-child) {
+// 	display: none !important;
+// }
 /*#endregion*/
 
 
@@ -545,7 +586,6 @@ div[aria-label='Content pane'] {
 	stroke: transparent !important;
 }
 /*#endregion*/
-
 
 
 
@@ -659,7 +699,7 @@ div[data-agendaitem] > div:first-child > div:first-child > div:last-child {
 // Body background
 // TODO: This applies to desktop site as well. Move to different section
 body {
-	background-color: var(--dmfo-darkest) !important;
+	// background-color: var(--dmfo-darkest) !important;
 }
 
 // Heading text color
@@ -681,7 +721,7 @@ body {
 
 /*#region STYLES FOR SIDE PANE */
 #PeopleSidePane {
-
-}	// TODO: WIP
+	// TODO: WIP
+}
 /*#endregion*/
 /*#endregion*/
